--- a/vben28/.env
+++ b/vben28/.env
@@ -2,7 +2,7 @@
 VITE_PORT = 4200
 
 # spa-title
-VITE_GLOB_APP_TITLE = Abp Pro
+VITE_GLOB_APP_TITLE = Flex Quality Abp
 
 # spa shortname
 VITE_GLOB_APP_SHORT_NAME = vue_abp_pro
