--- a/vben28/.env
+++ b/vben28/.env
@@ -2,7 +2,7 @@
 VITE_PORT = 4200
 
 # spa-title
-VITE_GLOB_APP_TITLE = Flex Quality Abp
+VITE_GLOB_APP_TITLE = Flex Quality ABP
 
 # spa shortname
-VITE_GLOB_APP_SHORT_NAME = vue_abp_pro
+VITE_GLOB_APP_SHORT_NAME = Vue_Flex_Quality
