--- a/vben28/package.json
+++ b/vben28/package.json
@@ -52,10 +52,12 @@
     "dayjs": "^1.11.1",
     "echarts": "^5.3.2",
     "intro.js": "^5.1.0",
+    "jwt-decode": "^3.1.2",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "nswag": "^13.18.2",
+    "oidc-client": "^1.11.5",
     "path-to-regexp": "^6.2.0",
     "pinia": "2.0.12",
     "print-js": "^1.6.0",
@@ -70,11 +72,10 @@
     "vue": "3.2.33",
     "vue-i18n": "^9.1.9",
     "vue-json-pretty": "^2.0.6",
-    "vue-router": "^4.0.14",
+    "vue-router": "4.0.14",
     "vue-types": "^4.1.1",
-    "xlsx": "^0.18.5",
-    "oidc-client": "^1.11.5",
-    "jwt-decode": "^3.1.2"
+    "windicss": "",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
@@ -107,8 +108,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^8.6.0",
     "esno": "^0.14.1",
     "fs-extra": "^10.1.0",
@@ -120,7 +121,7 @@
     "postcss": "^8.4.12",
     "postcss-html": "^1.4.1",
     "postcss-less": "^6.0.0",
-    "prettier": "^2.6.2",
+    "prettier": "^3.4.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.2",
     "rollup-plugin-visualizer": "^5.6.0",
