--- a/aspnet-core/host/Flex.Quality.HttpApi.Host/Flex.Quality.HttpApi.Host.csproj
+++ b/aspnet-core/host/Flex.Quality.HttpApi.Host/Flex.Quality.HttpApi.Host.csproj
@@ -57,6 +57,7 @@
         <Content Remove="Logs\**"/>
         <EmbeddedResource Remove="Logs\**"/>
         <None Remove="Logs\**"/>
+        <None Include="wwwroot\Login.css"/>
     </ItemGroup>
 
     <ItemGroup>
