--- a/aspnet-core/src/Flex.Quality.Domain/Flex.Quality.Domain.csproj
+++ b/aspnet-core/src/Flex.Quality.Domain/Flex.Quality.Domain.csproj
@@ -13,6 +13,8 @@
         <PackageReference Include="Lion.AbpPro.NotificationManagement.Domain"/>
         <PackageReference Include="Lion.AbpPro.DataDictionaryManagement.Domain"/>
         <PackageReference Include="Lion.AbpPro.LanguageManagement.Domain"/>
+        <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain" Version="8.3.0"/>
+        <PackageReference Include="Volo.Abp.OpenIddict.Domain" Version="8.3.0"/>
     </ItemGroup>
 
 </Project>
