--- a/aspnet-core/src/Flex.Quality.EntityFrameworkCore/Flex.Quality.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Flex.Quality.EntityFrameworkCore/Flex.Quality.EntityFrameworkCore.csproj
@@ -5,6 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain" Version="8.3.0"/>
+        <PackageReference Include="Volo.Abp.OpenIddict.Domain" Version="8.3.0"/>
         <ProjectReference Include="..\Flex.Quality.Domain\Flex.Quality.Domain.csproj"/>
         <PackageReference Include="DotNetCore.CAP.SqlServer" Version="8.3.1"/>
     </ItemGroup>
