feat(application): 新增组织结构和权限管理功能
- 添加 OrganizationAppService 和 PermissionAppService
- 实现获取子组织结构和批量授权功能
- 集成权限管理模块
- 新增相关控制器和DTO

--- a/aspnet-core/src/Flex.Quality.HttpApi/Flex.Quality.HttpApi.csproj
+++ b/aspnet-core/src/Flex.Quality.HttpApi/Flex.Quality.HttpApi.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Flex.Quality.Application.Contracts\Flex.Quality.Application.Contracts.csproj"/>
+        <ProjectReference Include="..\Flex.Quality.Application\Flex.Quality.Application.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
