feat(Flex-Quality):集成代码管理模块
- 添加 CodeManagement 相关的包引用
- 配置跨域策略，允许所有来源
- 新增代码管理相关的数据库迁移
- 更新 HTTP API 和客户端以支持代码管理功能
- 调整权限管理相关代码，支持部门权限授予

--- a/aspnet-core/host/Flex.Quality.HttpApi.Host/appsettings.Production.json
+++ b/aspnet-core/host/Flex.Quality.HttpApi.Host/appsettings.Production.json
@@ -31,7 +31,7 @@
   },
   "App": {
     "SelfUrl": "http://localhost:44315",
-    "CorsOrigins": "https://*.Quality.com,http://localhost:4200,http://localhost:3100,http://localhost:80,http://localhost"
+    "CorsOrigins": "https://*.Quality.com,http://localhost:4200,http://localhost:3100,http://localhost:80,http://localhost,http://localhost:4201/,http://10.201.145.198:4201/ "
   },
   "ConnectionStrings": {
     "Default": "Data Source=ANDREW;Initial Catalog=bpa.Quality;User ID=sa;Password=Press@123;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;"
