--- a/aspnet-core/host/Flex.Quality.HttpApi.Host/appsettings.json
+++ b/aspnet-core/host/Flex.Quality.HttpApi.Host/appsettings.json
@@ -31,7 +31,7 @@
   },
   "App": {
     "SelfUrl": "http://localhost:44315",
-    "CorsOrigins": "https://*.Quality.com,http://localhost:4200,http://localhost:3100"
+    "CorsOrigins": "https://*.Quality.com,http://localhost:4200,http://localhost:3100,http://localhost:4201/,http://10.201.145.198:4201/"
   },
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;database=Abp.FlexVnext;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
