--- a/aspnet-core/src/Flex.Quality.Domain.Shared/Flex.Quality.Domain.Shared.csproj
+++ b/aspnet-core/src/Flex.Quality.Domain.Shared/Flex.Quality.Domain.Shared.csproj
@@ -12,6 +12,7 @@
 
 
     <ItemGroup>
+        <PackageReference Include="Lion.AbpPro.CodeManagement.Domain.Shared" Version="1.2.2"/>
         <PackageReference Include="Lion.AbpPro.Core"/>
         <PackageReference Include="Lion.AbpPro.BasicManagement.Domain"/>
         <PackageReference Include="Lion.AbpPro.NotificationManagement.Domain"/>
