--- a/aspnet-core/src/Flex.Quality.Application.Contracts/Flex.Quality.Application.Contracts.csproj
+++ b/aspnet-core/src/Flex.Quality.Application.Contracts/Flex.Quality.Application.Contracts.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Lion.AbpPro.CodeManagement.Application.Contracts" Version="1.2.2"/>
         <PackageReference Include="Volo.Abp.ObjectExtending"/>
     </ItemGroup>
 
