--- a/aspnet-core/src/Flex.Quality.Domain/Flex.Quality.Domain.csproj
+++ b/aspnet-core/src/Flex.Quality.Domain/Flex.Quality.Domain.csproj
@@ -10,11 +10,13 @@
 
     <ItemGroup>
         <PackageReference Include="Lion.AbpPro.BasicManagement.Domain"/>
+        <PackageReference Include="Lion.AbpPro.CodeManagement.Domain" Version="1.2.2"/>
         <PackageReference Include="Lion.AbpPro.NotificationManagement.Domain"/>
         <PackageReference Include="Lion.AbpPro.DataDictionaryManagement.Domain"/>
         <PackageReference Include="Lion.AbpPro.LanguageManagement.Domain"/>
         <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain" Version="8.3.0"/>
         <PackageReference Include="Volo.Abp.OpenIddict.Domain" Version="8.3.0"/>
+        <PackageReference Include="Volo.Abp.PermissionManagement.Domain" Version="8.3.3"/>
     </ItemGroup>
 
 </Project>
