--- a/aspnet-core/src/Flex.Quality.HttpApi.Client/Flex.Quality.HttpApi.Client.csproj
+++ b/aspnet-core/src/Flex.Quality.HttpApi.Client/Flex.Quality.HttpApi.Client.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="Lion.AbpPro.BasicManagement.HttpApi.Client"/>
+        <PackageReference Include="Lion.AbpPro.CodeManagement.HttpApi.Client" Version="1.2.2"/>
         <PackageReference Include="Lion.AbpPro.NotificationManagement.HttpApi.Client"/>
         <PackageReference Include="Lion.AbpPro.DataDictionaryManagement.HttpApi.Client"/>
         <PackageReference Include="Lion.AbpPro.LanguageManagement.HttpApi.Client"/>
