--- a/vben28/package.json
+++ b/vben28/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vben-admin",
-  "version": "2.8.0",
+  "name": "Flex-Quality",
+  "version": "1.1.0",
   "author": {
     "name": "vben",
     "email": "anncwb@126.com",
