feat(权限管理): 实现基于用户组织的权限验证
- 新增 GetOrganizationUnitByUserAsync 方法获取用户所属组织单元
- 实现 UserOrganizationPermissionValueProvider 类进行权限验证
- 添加必要的数据库引用和接口扩展

--- a/aspnet-core/src/Flex.Quality.Application.Contracts/Flex.Quality.Application.Contracts.csproj
+++ b/aspnet-core/src/Flex.Quality.Application.Contracts/Flex.Quality.Application.Contracts.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Flex.Quality.Domain.Shared\Flex.Quality.Domain.Shared.csproj"/>
+        <ProjectReference Include="..\Flex.Quality.EntityFrameworkCore\Flex.Quality.EntityFrameworkCore.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
